# FFmpegProject

./: build.gradle
app/: build.gradle
app/src/androidTest/java/com/renfei/ffmpegproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  MineAudio.cpp  MineAudio.h  MineCallJava.cpp  MineCallJava.h  MineFFmpeg.cpp  MineFFmpeg.h  MinePlayStatus.cpp  MinePlayStatus.h  MineQueue.cpp  MineQueue.h  native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/java/com/renfei/ffmpegproject/: MainActivity.java  OpenSL_ES  Sign.java
app/src/main/java/com/renfei/ffmpegproject/Player/: MinePlayer.java
app/src/main/java/com/renfei/ffmpegproject/act/: DecodeAudioDataActivity.java
app/src/main/java/com/renfei/ffmpegproject/adapter/: OpenGLCourseAdapter.java  VideoInfoAdapter.java
app/src/main/java/com/renfei/ffmpegproject/base/: BaseActivity.java
app/src/main/java/com/renfei/ffmpegproject/bean/: MenuInfo.java
app/src/main/java/com/renfei/ffmpegproject/ffmpeg/: FfmpegUtil.java
app/src/main/java/com/renfei/ffmpegproject/listener/: MineOnParparedListener.java
app/src/main/res/drawable/: bg_loading_dialog.xml
app/src/main/res/layout/: activity_decode_audio_data.xml  activity_main.xml  dg_loading.xml  item_opengl_course.xml  item_video_info.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/renfei/ffmpegproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
